# acquiring-linguistic-knowledge

./: .gitignore  .gitmodules  CITATION.cff  README.md  local_dev.sh  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
alkmi/: definitions.py  lightning_models.py  model.py  multinode_run_on_cluster.sh  overfit.py  resume_singlenode_run_on_cluster.sh  resume_singlenode_run_on_cluster_2.sh  resume_singlenode_run_on_cluster_3.sh  resume_singlenode_run_on_cluster_4.sh  resume_singlenode_run_on_cluster_5.sh  run_locally.sh  run_on_cluster.sh  run_sweep_on_cluster.sh  singlenode_run_on_cluster.sh  train.py  utils.py
alkmi/callbacks/: blimp_eval.py  flava_lm.py  imagenet_zeroshot.py  imagenet_zeroshot_data.py  multimodal_overfitting_monitor.py  multimodal_scheduler.py  pseudo_perplexity_eval.py  text_lm.py  utils.py
alkmi/configs/: debug.yaml  debug_sweep_config.yaml  wit.yaml  wit_final_sweep_config.yaml  wit_fp16.yaml  wit_hyperparams_sweep_config.yaml  wit_mlm_lr_sweep_config.yaml  wit_mlm_perc_sweep_config.yaml  wit_resume_model.yaml  wit_sampling_temperature_sweep_config.yaml  wit_sweep_config.yaml
alkmi/configs/bert/: debug.yaml  mlm_lr_sweep_config.yaml  mlm_lr_warmup_sweep_config.yaml  mlm_perc_sweep_config.yaml  wit.yaml
alkmi/configs/flava/: debug.yaml  debug_sweep_config.yaml  wit.yaml  wit_final_sweep_config.yaml  wit_fp16.yaml  wit_hyperparams_sweep_config.yaml  wit_mlm_lr_sweep_config.yaml  wit_resume_model.yaml  wit_resume_model_2.yaml  wit_resume_model_3.yaml  wit_sampling_temperature_sweep_config.yaml
alkmi/configs/roberta/: alex_100m.yaml  debug.yaml  debug_multinode_nyu_100m.yaml  mlm_lr_sweep_config.yaml  mlm_lr_warmup_sweep_config.yaml  multinode_nyu_100m.yaml  nyu_100m.yaml  nyu_100m_seed_sweep_config.yaml  openwebtext.yaml  openwebtext_40GB_VRAM.yaml  wit.yaml
alkmi/configs/wit_medium/: wit_medium.yaml  wit_medium_hyperparams_sweep_config.yaml
alkmi/configs/wit_tiny/: wit_tiny.yaml  wit_tiny_hyperparams_sweep_config.yaml
alkmi/data/: datamodules.py  multidata.py  text_datamodules.py  transforms.py  utils.py
alkmi/models/: lightning_bert.py  lightning_flava.py  lightning_roberta.py  utils.py
alkmi/models/flava/: __init__.py  configuration_flava.py  convert_flava_original_pytorch_to_hf.py  feature_extraction_flava.py  modeling_flava.py  (+1 more)
alkmi/scripts/: resume_singlenode_run_on_cluster.sh  run_locally.sh  singlenode_run_on_cluster.sh
assets/: OpenWebText.md  WiT.md
assets/plots/: plot_wandb.py
data_preprocessing/wit/: process_wit.py  run_process_wit.sh
pretraining/: README.md  definitions.py  model.py  run_on_cluster.sh  run_sweep_on_cluster.sh  train.py  utils.py
pretraining/callbacks/: bert_lm.py  blimp_eval.py  flava_lm.py  imagenet_zeroshot_eval.py  multimodal_overfitting_monitor.py  pseudo_perplexity_eval.py  text_lm.py  utils.py
pretraining/configs/: debug.yaml  debug_sweep_config.yaml  wit.yaml  wit_hyperparams_sweep_config.yaml  wit_sampling_temperature_sweep_config.yaml  wit_sweep_config.yaml
pretraining/data/: datamodules.py  multidata.py  text_datamodules.py  transforms.py  utils.py
proposal/: AufgabenstellungMastersThesisDINFKpdf.tex  references.bib
scripts/: run_flava_on_cluster.sh
utils/: push_model_to_hub.py  run_initial_setup.sh
wit_processing/: README.md  find_best_number_of_workers.py  initial_setup.py  run_initial_setup.sh  run_word_counter.sh  word_counter.py
(+97 files in other folders)
