[tool.poetry]
name = "alkmi"
version = "0.1.0"
description = "ETH Thesis - Acquiring Linguistic Knowledge from Multimodal Input"
license = "BSD-3-Clause"
authors = ["Theodor Amariucai <amariucaitheodor@protonmail.com>", "PyTorch Multimodal Team torchmultimodal@fb.com"]
maintainers = ["Theodor Amariucai <amariucaitheodor@protonmail.com>"]
repository = "https://github.com/amariucaitheodor/acquiring-linguistic-knowledge"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
wandb = "^0.15.3"
omegaconf = "^2.3.0"
pytorch-lightning = "^2.0.2"
transformers = "^4.29.2"
datasets = "^2.12.0"
hydra-core = "^1.3.2"
requests = "^2.30.0"
DALL-E = "^0.1"
pycocotools = "^2.0.6"
Pillow = "^9.5.0"
protobuf = "^4.23.1"
evaluate = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
